@@ -41,9 +41,13 @@ class cdnboxDNSserver extends EventEmitter {
     var self = new cdnboxDNSserver(protocol);
     self.socket = dgram.createSocket(protocol);
     self.socket.on('message', function(msg, remote) {
-      var buff = self.handleMessage(msg, remote);
-      if (buff !== null) {
-        self.socket.send(buff, 0, buff.length, remote.port, remote.address);
+      if (remote.port !== 0) {
+        var buff = self.handleMessage(msg, remote);
+        if (buff !== null) {
+          self.socket.send(buff, 0, buff.length, remote.port, remote.address);
+        } else {
+          cdnboxStates.logerror('"error": "Discarding DNS remote port 0 for ' + remote.address + '"');
+        }
       }
     });
     self.socket.on('listening', function() {
